--- a/References.bib
+++ b/References.bib
@@ -546,6 +546,17 @@
   year = {2014}
 }
 
+@article{DeVicose2007,
+	title = {Embryonic and larval development of \textit{{Haliotis} tuberculata coccinea} {Reeve}: an indexed micro-photographic sequence},
+	volume = {26},
+	doi = {10.2983/0730-8000(2007)26[847:EALDOH]2.0.CO;2},
+	number = {3},
+	journal = {Journal of Shellfish Research},
+	author = {De Viçose, G. C. and Viera, M. P. and Bilbao, A. and Izquierdo, M. S.},
+	year = {2007},
+	pages = {847--854}
+}
+
 @article{Dewing2001Hingemodifications,
   author = {Dewing, K.},
   doi = {10.1139/e00-027},
@@ -1706,6 +1717,17 @@
 	author = {Marlow, H. and Tosches, M. A. and Tomer, R. and Steinmetz, P. R. and Lauri, A. and Larsson, T. and Arendt, D.},
 	year = {2014},
 	pages = {7}
+}
+
+@article{Marois1997,
+	title = {Ontogeny of serotonergic neurons in \textit{{Aplysia} californica}},
+	volume = {386},
+	doi = {10.1002/(SICI)1096-9861(19970929)386:3<477::AID-CNE10>3.0.CO;2-8},
+	number = {3},
+	journal = {The Journal of Comparative Neurology},
+	author = {Marois, R. and Carew, T. J.},
+	year = {1997},
+	pages = {477--490}
 }
 
 @article{Martel2000,
