--- a/References.bib
+++ b/References.bib
@@ -3079,6 +3079,17 @@
   year = {2018}
 }
 
+@article{Voronezhskaya2008,
+	title = {Neuronal development in larval mussel \textit{{Mytilus} trossulus} ({Mollusca}: {Bivalvia})},
+	volume = {127},
+	doi = {10.1007/s00435-007-0055-z},
+	number = {2},
+	journal = {Zoomorphology},
+	author = {Voronezhskaya, E. E. and Nezlin, L. P. and Odintsova, N. A. and Plummer, J. T. and Croll, R. P.},
+	year = {2008},
+	pages = {97--110}
+}
+
 @incollection{Waller1998,
 	address = {Calgary},
 	title = {Origin of the molluscan class {Bivalvia} and a phylogeny of major groups},
