--- a/preamble.tex
+++ b/preamble.tex
@@ -5,3 +5,4 @@
 \usepackage[nottoc]{tocbibind} % list references in TOC
 \raggedbottom
 \usepackage[section]{placeins}
+\DeclareUnicodeCharacter{3BC}{$\mu$}
