--- a/References.bib
+++ b/References.bib
@@ -74,6 +74,17 @@
   year = {2013}
 }
 
+@article{AuzouxBordenave2010,
+	title = {Ultrastructure, chemistry and mineralogy of the growing shell of the {European} abalone \textit{{Haliotis} tuberculata}},
+	volume = {171},
+	doi = {10.1016/j.jsb.2010.05.012},
+	number = {3},
+	journal = {Journal of Structural Biology},
+	author = {Auzoux-Bordenave, Stéphanie and Badou, Aïcha and Gaume, Béatrice and Berland, S. and Helléouet, Marie-Noëlle and Milet, C. and Huchette, S.},
+	year = {2010},
+	pages = {277--290}
+}
+
 @article{Balthasar2004Shellstructure,
   author = {Balthasar, U.},
   doi = {10.1080/00241160410002090},
@@ -2090,6 +2101,17 @@
   year = {1982}
 }
 
+@article{Pojeta1972,
+	title = {Rostroconchia: a new class of bivalved mollusks},
+	volume = {177},
+	doi = {10.1126/science.177.4045.264},
+	number = {4045},
+	journal = {Science},
+	author = {Pojeta, J. and Runnegar, B. N. and Morris, N. J. and Newell, N. D.},
+	year = {1972},
+	pages = {264--267}
+}
+
 @article{Ponder1997,
   author = {Ponder, W. F. and Lindberg, D. R.},
   doi = {10.1111/j.1096-3642.1997.tb00137.x},
@@ -3066,6 +3088,16 @@
 	author = {Vinther, J. and Jell, P. A. and Kampouris, G. and Carney, R. and Racicot, R. A. and Briggs, D. E. G.},
 	year = {2012},
 	pages = {1007--1019},
+}
+
+@article{Vinther2017,
+	title = {Ancestral morphology of crown-group molluscs revealed by a new {Ordovician} stem aculiferan},
+	volume = {542},
+	doi = {10.1038/nature21055},
+	journal = {Nature},
+	author = {Vinther, J. and Parry, L. and Briggs, D. E. G. and {Van Roy}, P.},
+	year = {2017},
+	pages = {471--474}
 }
 
 @article{Vogt2017,
