--- a/References.bib
+++ b/References.bib
@@ -266,6 +266,16 @@
   year = {2009},
 }
 
+@article{Bengtson1992,
+	title = {The cap-shaped {Cambrian} fossil \textit{{Maikhanella}} and the relationship between coeloscleritophorans and molluscs},
+	volume = {25},
+	number = {4},
+	journal = {Lethaia},
+	author = {Bengtson, S.},
+	year = {1992},
+	pages = {401--420}
+}
+
 @book{BereiterHahn1984,
   author = {Bereiter-Hahn, J. and Matoltsy, A. G. and {Slyvia Richards}, K.},
   pages = {858},
@@ -1228,6 +1238,17 @@
   year = {1997},
 }
 
+@article{Holmer2006,
+	title = {First record of canaliform shell structure from the {Lower} {Cambrian} paterinate brachiopod {\textasciitilde}{Askepasma}{\textasciitilde} from {South} {Australia}},
+	volume = {32},
+	doi = {10.1016/j.jep.2011.11.008.An},
+	number = {1998},
+	journal = {Memoirs of the Association of Australasian Palaeontologists},
+	author = {Holmer, L. E. and Skovsted, C. B. and Brock, G. A.},
+	year = {2006},
+	pages = {1--5}
+}
+
 @article{Holmer2006Aspinose,
   author = {Holmer, L. E. and Caron, J.-B.},
   doi = {10.1111/j.1463-6395.2006.00241.x},
@@ -1381,6 +1402,17 @@
   year = {1992},
 }
 
+@article{Kaas1981,
+	title = {Scandinavian species of \textit{{Leptochiton}} {Gray}, 1847 ({Mollusca}, {Polyplacophora})},
+	volume = {66},
+	doi = {10.1080/00364827.1981.10414541},
+	number = {3},
+	journal = {Sarsia},
+	author = {Kaas, P.},
+	year = {1981},
+	pages = {217--229}
+}
+
 @article{Katsuno2008,
 	title = {Comparative histology of radula-supporting structures in {Gastropoda}},
 	volume = {50},
@@ -1490,6 +1522,16 @@
   title = {{Chiton integument: ultrastructure of the sensory hairs of \textit{Mopalia muscosa} (Mollusca: Polyplacophora)}},
   volume = {223},
   year = {1982}
+}
+
+@article{Leise1986,
+	title = {Chiton integument: development of sensory organs in juvenile \textit{{Mopalia} muscosa}},
+	volume = {189},
+	number = {1},
+	journal = {Journal of Morphology},
+	author = {Leise, E. M.},
+	year = {1986},
+	pages = {71--87}
 }
 
 @article{Leise1988,
@@ -2054,6 +2096,17 @@
   title = {{Maximum Likelihood inference of small trees in the presence of long branches}},
   volume = {63},
   year = {2014}
+}
+
+@article{Parry2016,
+	title = {The impact of fossil data on annelid phylogeny inferred from discrete morphological characters},
+	volume = {283},
+	doi = {10.1098/rspb.2016.1378},
+	number = {1837},
+	journal = {Proceedings of the Royal Society B: Biological Sciences},
+	author = {Parry, L. A. and Edgecombe, G. D. and Eibye-Jacobsen, D. and Vinther, J.},
+	year = {2016},
+	pages = {20161378}
 }
 
 @article{Parry2019,
