--- a/index.Rmd
+++ b/index.Rmd
@@ -80,8 +80,8 @@ neomorphic <- vapply(my_states, IsNeomorphic, logical(1))
 #kValues <- c(3, 4.5, 7, 10.5, 16, 24)
 kValues <- c(4.5, 10.5, 24)
 
-outgroup <- 'Namacalathus'
 outgroup <- 'Loxosomella'
+outgroup <- 'Yilingia_spiciformis'
 rootingTips <- c('Tonicella', 'Serpula', 'Loxosomella')
 rootingTips <- outgroup
 ```
