--- a/References.bib
+++ b/References.bib
@@ -459,6 +459,16 @@
 	year = {2019}
 }
 
+@article{Cherns2004,
+	title = {Early {Palaeozoic} diversification of chitons ({Polyplacophora}, {Mollusca}) based on new data from the {Silurian} of {Gotland}, {Sweden}},
+	volume = {37},
+	number = {4},
+	journal = {Lethaia},
+	author = {Cherns, L.},
+	year = {2004},
+	pages = {445--456}
+}
+
 @book{Clarkson2013InvertebratePalaeontology,
   author = {Clarkson, E. N. K.},
   title = {{Invertebrate Palaeontology and Evolution}},
@@ -685,6 +695,16 @@
   pages = {291--302},
   volume = {25},
   year = {1992},
+}
+
+@article{Faller2012,
+	title = {Comparative neuroanatomy of {Caudofoveata}, {Solenogastres}, {Polyplacophora}, and {Scaphopoda} ({Mollusca}) and its phylogenetic implications},
+	volume = {131},
+	number = {2},
+	journal = {Zoomorphology},
+	author = {Faller, S. and Rothe, B. H. and Todt, C. and Schmidt-Rhaesa, A. and Loesel, R.},
+	year = {2012},
+	pages = {149--170}
 }
 
 @article{Fischer1980,
@@ -1596,6 +1616,17 @@
 	pages = {230--247}
 }
 
+@article{Lindgren2004,
+	title = {A combined approach to the phylogeny of {Cephalopoda} ({Mollusca})},
+	volume = {20},
+	doi = {10.1111/j.1096-0031.2004.00032.x},
+	number = {5},
+	journal = {Cladistics},
+	author = {Lindgren, A. R. and Giribet, G. and Nishiguchi, M. K.},
+	year = {2004},
+	pages = {454--486}
+}
+
 @article{Lundin2001,
 	title = {Ciliary ultrastructure of neomeniomorphs ({Mollusca}, {Neomeniomorpha} = {Solenogastres})},
 	volume = {120},
@@ -2253,6 +2284,39 @@
   year = {2008}
 }
 
+@article{Purschke1997O,
+	title = {Ultrastructure of the nuchal organ and cerebral organ in {\textasciitilde}{Onchnesoma} squamatum{\textasciitilde} ({Sipuncula}, {Phascolionidae})},
+	volume = {117},
+	doi = {10.1007/s004350050026},
+	number = {1},
+	journal = {Zoomorphology},
+	author = {Purschke, Günter and Wolfrath, F. and Westheide, W.},
+	year = {1997},
+	pages = {23--31}
+}
+
+@article{Purschke1997R,
+	title = {Ultrastructure of nuchal organs in polychaetes ({Annelida}) — new results and review},
+	volume = {78},
+	doi = {10.1111/j.1463-6395.1997.tb01133.x},
+	number = {2},
+	journal = {Acta Zoologica},
+	author = {Purschke, Günter},
+	year = {1997},
+	pages = {123--143}
+}
+
+@article{Purschke2005,
+	title = {Sense organs in polychaetes ({Annelida})},
+	volume = {535-536},
+	doi = {10.1007/s10750-004-4358-5},
+	number = {1},
+	journal = {Hydrobiologia},
+	author = {Purschke, Günter},
+	year = {2005},
+	pages = {53--78}
+}
+
 @article{Rannala2012,
   author = {Rannala, B. and Zhu, T.-Q. and Yang, Z.-H.},
   doi = {10.1093/molbev/msr210},
@@ -2503,6 +2567,17 @@
   year = {2004},
 }
 
+@incollection{SalviniPlawen1996,
+  address = {London},
+  author = {{von Salvini-Plawen}, L. and Steiner, G.},
+  booktitle = {Origin and Evolutionary Radiation of the Mollusca},
+  editor = {Taylor, J D},
+  pages = {29--51},
+  publisher = {The Malacological Society of London},
+  title = {{Synapomorphies and plesiomorphies in higher classification of Mollusca}},
+  year = {1996}
+}
+
 @article{Santagata2002,
   author = {Santagata, S.},
   doi = {10.1046/j.1525-142x.2002.01055.x},
@@ -2525,6 +2600,17 @@
   title = {{Larval evelopment of \textit{Phoronis pallida} (Phoronida): implications for morphological convergence and divergence among larval body plans}},
   volume = {259},
   year = {2004}
+}
+
+@incollection{Sasaki2010,
+	address = {Tokyo},
+	title = {Anatomy of living \textit{{Nautilus}}: reevaluation of primitiveness and comparison with {Coleoidea}},
+	booktitle = {Cephalopods: {Present} and {Past}},
+	publisher = {Tokai University Press},
+	author = {Sasaki, T. and Shigeno, S. and Tanabe, K.},
+	editor = {Tanabe, K and Shigeta, Y and Sasaki, T and Hirano, H},
+	year = {2010},
+	pages = {35--66}
 }
 
 @article{Scheltema1993,
@@ -2633,6 +2719,16 @@
   title = {{Comparative morphology of the nervous system in three phylactolaemate bryozoans}},
   volume = {12},
   year = {2015}
+}
+
+@article{Sigwart2007,
+	title = {Deep molluscan phylogeny: synthesis of palaeontological and neontological data},
+	volume = {274},
+	doi = {10.1098/rspb.2007.0701},
+	journal = {Proceedings of the Royal Society B: Biological Sciences},
+	author = {Sigwart, J. D. and Sutton, M. D.},
+	year = {2007},
+	pages = {2413--2419}
 }
 
 @article{Simmons2011,
@@ -2806,17 +2902,6 @@
   year = {2011},
 }
 
-@incollection{SPS1996,
-  address = {London},
-  author = {{von Salvini-Plawen}, L. and Steiner, G.},
-  booktitle = {Origin and Evolutionary Radiation of the Mollusca},
-  editor = {Taylor, J D},
-  pages = {29--51},
-  publisher = {The Malacological Society of London},
-  title = {{Synapomorphies and plesiomorphies in higher classification of Mollusca}},
-  year = {1996}
-}
-
 @article{Steiner1992,
   author = {Steiner, G.},
   doi = {10.1093/mollus/58.4.385},
@@ -2837,6 +2922,17 @@
 	author = {Steiner, G.},
 	year = {1998},
 	pages = {73--82}
+}
+
+@article{Steiner1999,
+	title = {A new genus and species of the family {Anulidentaliidae} ({Scaphopoda}: {Dentaliida}) and its systematic implications},
+	volume = {65},
+	doi = {10.1093/mollus/65.2.151},
+	number = {2},
+	journal = {Journal Molluscan Studies},
+	author = {Steiner, G.},
+	year = {1999},
+	pages = {151--161}
 }
 
 @article{Storch1978,
