--- a/References.bib
+++ b/References.bib
@@ -201,6 +201,17 @@
   year = {2001}
 }
 
+@article{Bartolomaeus2002,
+	title = {Structure and formation of thoracic and abdominal uncini in \textit{{Fabricia} stellaris} ({Müller}, 1774) – implication for the evolution of {Sabellida} ({Annelida})},
+	volume = {241},
+	doi = {10.1078/0044-5231-00015},
+	number = {1},
+	journal = {Zoologischer Anzeiger},
+	author = {Bartolomaeus, T.},
+	year = {2002},
+	pages = {1--17}
+}
+
 @article{Bartolomaeus2005,
   author = {Bartolomaeus, T. and Quast, B.},
   doi = {10.1007/s10750-004-1840-z},
@@ -411,6 +422,17 @@
   year = {1994}
 }
 
+@article{Capa2011,
+	title = {Phylogeny of {Sabellidae} ({Annelida}) and relationships with other taxa inferred from morphology and multiple genes},
+	volume = {27},
+	doi = {10.1111/j.1096-0031.2010.00341.x},
+	number = {5},
+	journal = {Cladistics},
+	author = {Capa, María and Hutchings, P. and Aguado, M. T. and Bott, N. J.},
+	year = {2011},
+	pages = {449--469}
+}
+
 @article{Carlson1995Phylogeneticrelationships,
   author = {Carlson, S. J.},
   doi = {10.1111/j.1096-0031.1995.tb00084.x},
@@ -438,6 +460,17 @@
   pages = {28--31},
   volume = {34},
   year = {1914},
+}
+
+@article{Checa2017,
+	title = {Cuticle of {Polyplacophora}: structure, secretion, and homology with the periostracum of conchiferans},
+	volume = {164},
+	doi = {10.1007/s00227-017-3100-6},
+	number = {4},
+	journal = {Marine Biology},
+	author = {Checa, A. G. and Vendrasco, M. J. and Salas, C.},
+	year = {2017},
+	pages = {64}
 }
 
 @article{Chen2007Reinterpretationof,
@@ -1341,6 +1374,15 @@
   year = {2018},
 }
 
+@article{Holthe1986,
+	title = {Evolution, systematics, and distribution of the {Polychaeta} {Terebellomorpha}, with a catalogue of the taxa and a bibliography},
+	volume = {55},
+	journal = {Gunneria},
+	author = {Holthe, T.},
+	year = {1986},
+	pages = {1--236}
+}
+
 @incollection{Hou2017Brachiopoda,
   author = {Hou, X.-G. and Siveter, D. J. and Siveter, D. J. and Aldridge, R. J. and Cong, P.-Y. and Gabbott, S. E. and Purnell, M. A.},
   doi = {10.1002/9781118896372.ch14},
@@ -2000,6 +2042,17 @@
   year = {1991}
 }
 
+@article{Nielsen2007,
+	title = {Early development of the aplacophoran mollusc \textit{{Chaetoderma}}},
+	volume = {88},
+	doi = {10.1111/j.1463-6395.2007.00270.x},
+	number = {3},
+	journal = {Acta Zoologica},
+	author = {Nielsen, C. and Haszprunar, G. and Ruthensteiner, B. and Wanninger, A.},
+	year = {2007},
+	pages = {231--247}
+}
+
 @article{Niijima1965,
 	title = {The acrosome reaction in \textit{{Mytilus} edulis}: {I}. {Fine} structure of the intact acrosome},
 	volume = {25},
@@ -2129,6 +2182,17 @@
   year = {2014}
 }
 
+@article{Parry2015,
+	title = {Cambrian stem-group annelids and a metameric origin of the annelid head},
+	volume = {11},
+	doi = {10.1098/rsbl.2015.0763},
+	number = {10},
+	journal = {Biology Letters},
+	author = {Parry, L. A. and Vinther, J. and Edgecombe, G. D.},
+	year = {2015},
+	pages = {20150763}
+}
+
 @article{Parry2016,
 	title = {The impact of fossil data on annelid phylogeny inferred from discrete morphological characters},
 	volume = {283},
@@ -2146,7 +2210,7 @@
 	doi = {10.1126/sciadv.aax5858},
 	number = {9},
 	journal = {Science Advances},
-	author = {Parry, L. and Caron, J.-B.},
+	author = {Parry, L. A. and Caron, J.-B.},
 	year = {2019},
 	pages = {eaax5858}
 }
@@ -2474,6 +2538,17 @@
   title = {{Cladistics and polychaetes}},
   volume = {26},
   year = {1997}
+}
+
+@article{Rouse1997C,
+	title = {Cladistics and polychaetes},
+	volume = {26},
+	doi = {10.1111/j.1463-6409.1997.tb00412.x},
+	number = {2},
+	journal = {Zoologica Scripta},
+	author = {Rouse, G. W. and Fauchald, K.},
+	year = {1997},
+	pages = {139--204}
 }
 
 @article{Rouse1999,
@@ -3001,6 +3076,17 @@
   year = {2018},
 }
 
+@article{Sutton2004,
+	title = {Computer reconstruction and analysis of the vermiform mollusc \textit{{Acaenoplax} hayae} from the {Herefordshire} lagerstätte ({Silurian}, {England}), and implications for molluscan phylogeny},
+	volume = {47},
+	doi = {10.1111/j.0031-0239.2004.00374.x},
+	number = {2},
+	journal = {Palaeontology},
+	author = {Sutton, M. D. and Briggs, D. E. G. and Siveter, D. J. and Siveter, D. J.},
+	year = {2004},
+	pages = {293--318}
+}
+
 @article{Sutton2005Silurianbrachiopods,
   author = {Sutton, M. D. and Briggs, D. E. G. and Siveter, D. J. and Siveter, D. J.},
   doi = {10.1038/nature03846},
@@ -3085,6 +3171,17 @@
 	author = {Thomas, R. D. and Vinther, J.},
 	year = {2012},
 	pages = {326}
+}
+
+@article{Tilic2016,
+	title = {Chaetal type diversity increases during evolution of {Eunicida} ({Annelida})},
+	volume = {16},
+	doi = {10.1007/s13127-015-0257-z},
+	number = {1},
+	journal = {Organisms Diversity and Evolution},
+	author = {Tilic, E. and Bartolomaeus, T. and Rouse, G. W.},
+	year = {2016},
+	pages = {105--119}
 }
 
 @article{Topper2013Reappraisalof,
