--- a/References.bib
+++ b/References.bib
@@ -326,11 +326,13 @@
 }
 
 @article{Brazeau2018,
-  author = {Brazeau, M. D. and Guillerme, T. and Smith, M. R.},
-  doi = {10.1101/209775},
-  journal = {Systematic Biology},
-  title = {{An algorithm for morphological phylogenetic analysis with inapplicable data}},
-  year = {2018}
+	title = {An algorithm for morphological phylogenetic analysis with inapplicable data},
+	url = {https://dx.doi.org/10.1093/sysbio/syy083},
+	doi = {10.1093/sysbio/syy083},
+	journal = {Systematic Biology},
+	author = {Brazeau, Martin D. and Guillerme, Thomas and Smith, Martin Ross},
+	year = {2019},
+	pages = {online ahead of print}
 }
 
 @article{Bubel1983,
