--- a/References.bib
+++ b/References.bib
@@ -327,10 +327,9 @@
 
 @article{Brazeau2018,
 	title = {An algorithm for morphological phylogenetic analysis with inapplicable data},
-	url = {https://dx.doi.org/10.1093/sysbio/syy083},
 	doi = {10.1093/sysbio/syy083},
 	journal = {Systematic Biology},
-	author = {Brazeau, Martin D. and Guillerme, Thomas and Smith, Martin Ross},
+	author = {Brazeau, M. D. and Guillerme, T. and Smith, M. R.},
 	year = {2019},
 	pages = {online ahead of print}
 }
@@ -1218,6 +1217,17 @@
   year = {2010}
 }
 
+@article{Helm2018,
+	title = {Convergent evolution of the ladder-like ventral nerve cord in {Annelida}},
+	volume = {15},
+	doi = {10.1186/s12983-018-0280-y},
+	number = {1},
+	journal = {Frontiers in Zoology},
+	author = {Helm, C. and Beckers, P. and Bartolomaeus, T. and Drukewitz, S. H. and Kourtesis, I. and Weigert, A. and Purschke, Günter and Worsaae, K. and Struck, T. H. and Bleidorn, C.},
+	year = {2018},
+	pages = {36}
+}
+
 @incollection{Herrmann1997Phoronida,
   author = {Herrmann, K.},
   editor = {Harrison, F. W. and Woollacott, R. M.},
@@ -1436,6 +1446,17 @@
   title = {{New data on \textit{Oikozetetes} (Mollusca, Halkieriidae) from the lower Cambrian of South Australia}},
   volume = {88},
   year = {2014}
+}
+
+@article{Jaeckle1989,
+	title = {Feeding by a "nonfeeding" larva: uptake of dissolved amino acids from seawater by lecithotrophic larvae of the gastropod \textit{{Haliotis} rufescens}},
+	volume = {103},
+	doi = {10.1007/BF00391067},
+	number = {1},
+	journal = {Marine Biology},
+	author = {Jaeckle, W. B. and Manahan, D. T.},
+	year = {1989},
+	pages = {87--94}
 }
 
 @book{Jamieson1991FishEvolution,
@@ -1932,6 +1953,16 @@
 	pages = {8}
 }
 
+@article{Meyer2015,
+	title = {Nervous system development in lecithotrophic larval and juvenile stages of the annelid {\textasciitilde}{Capitella} teleta{\textasciitilde}},
+	volume = {12},
+	doi = {10.1186/s12983-015-0108-y},
+	journal = {Frontiers in Zoology},
+	author = {Meyer, Néva P. and Carrillo-Baltodano, A. and Moore, R. E. and Seaver, E. C.},
+	year = {2015},
+	pages = {15}
+}
+
 @article{Miles2007,
   author = {Miles, C. M. and Hadfield, M. G. and Wayne, M. L.},
   doi = {10.3354/meps340155},
@@ -2226,6 +2257,17 @@
   title = {{\textit{Oikozetetes} from the early Cambrian of South Australia: implications for halkieriid affinities and functional morphology}},
   volume = {42},
   year = {2009}
+}
+
+@article{Peebles2017,
+	title = {Valve microstructure and phylomineralogy of {New} {Zealand} chitons},
+	volume = {197},
+	doi = {10.1016/j.jsb.2016.12.002},
+	number = {3},
+	journal = {Journal of Structural Biology},
+	author = {Peebles, B. A. and Smith, A. M. and Spencer, H. G.},
+	year = {2017},
+	pages = {250--259}
 }
 
 @article{Pennerstorfer2012,
@@ -2968,6 +3010,17 @@
   journal = {In preparation}
 }
 
+@article{Sperling2009,
+	title = {{MicroRNAs} resolve an apparent conflict between annelid systematics and their fossil record},
+	volume = {276},
+	doi = {10.1098/rspb.2009.1340},
+	number = {1677},
+	journal = {Proceedings of the Royal Society B: Biological Sciences},
+	author = {Sperling, E. A. and Vinther, J. and Moy, V. N. and Wheeler, B. M. and Sémon, M. and Briggs, D. E. G. and Peterson, K. J.},
+	year = {2009},
+	pages = {4315--4322}
+}
+
 @article{Sperling2011Molecularpaleobiological,
   author = {Sperling, E. A. and Pisani, D. and Peterson, K. J.},
   doi = {10.1111/j.1525-142X.2011.00480.x},
@@ -3272,6 +3325,16 @@
   title = {{\textit{Pauxillites thaddei} a new Lower Ordovician hyolith from Morocco}},
   volume = {71},
   year = {2015}
+}
+
+@article{Vendrasco2004,
+	title = {Articulated {Palaeozoic} fossil with 17 plates greatly expands disparity of early chitons},
+	volume = {429},
+	number = {6989},
+	journal = {Nature},
+	author = {Vendrasco, M. J. and Wood, T. E. and Runnegar, B. N.},
+	year = {2004},
+	pages = {288--291}
 }
 
 @article{Vendrasco2008,
