--- a/References.bib
+++ b/References.bib
@@ -453,6 +453,17 @@
   year = {2009}
 }
 
+@article{Caron2006,
+	title = {A soft-bodied mollusc with radula from the {Middle} {Cambrian} {Burgess} {Shale}},
+	volume = {442},
+	doi = {10.1038/nature04894},
+	number = {7099},
+	journal = {Nature},
+	author = {Caron, J.-B. and Scheltema, Amélie H. and Schander, C. and Rudkin, D.},
+	year = {2006},
+	pages = {159--163}
+}
+
 @article{Chapman1914IVNotes,
   author = {Chapman, F.},
   doi = {10.1111/j.1365-2818.1914.tb01730.x},
@@ -533,6 +544,16 @@
   year = {2012}
 }
 
+@article{ConwayMorris1995,
+	title = {Enigmatic shells, possibly halkieriid, from the {Middle} {Cambrian} {Burgess} {Shale}, {British} {Columbia}},
+	volume = {195},
+	number = {1},
+	journal = {Neues Jahrbuch für Geologie und Paläontologie - Abhandlungen},
+	author = {Conway Morris, S.},
+	year = {1995},
+	pages = {319}
+}
+
 @article{ConwayMorris1996,
 	title = {Lower {Cambrian} coeloscleritophorans (\textit{{Ninella}}, \textit{{Siphogonuchites}}) from {Xinjiang} and {Shaanxi}, {China}},
 	volume = {133},
@@ -598,6 +619,14 @@
   pages = {799--840},
   volume = {42},
   year = {1999},
+}
+
+@book{Cutler1994,
+	address = {Ithaca, NY},
+	title = {The {Sipuncula}: their systematics, biology, and evolution},
+	publisher = {Cornell University Press},
+	author = {Cutler, E. B.},
+	year = {1994}
 }
 
 @article{Devaere2014,
@@ -707,6 +736,17 @@
 	publisher = {Springer},
 	author = {Ehrlich, H.},
 	year = {2010}
+}
+
+@article{EibyeJacobsen2004,
+	title = {A reevaluation of \textit{{Wiwaxia}} and the polychaetes of the {Burgess} {Shale}},
+	volume = {37},
+	doi = {10.1080/00241160410002027},
+	number = {3},
+	journal = {Lethaia},
+	author = {Eibye-Jacobsen, D.},
+	year = {2004},
+	pages = {317--335}
 }
 
 @article{Elliott1939Noteon,
@@ -1345,6 +1385,17 @@
   year = {2009},
 }
 
+@article{Holmer2011,
+	title = {First record of a bivalved larval shell in {Early} {Cambrian} tommotiids and its phylogenetic significance},
+	volume = {54},
+	doi = {10.1111/j.1475-4983.2010.01030.x},
+	number = {2},
+	journal = {Palaeontology},
+	author = {Holmer, L. E. and Skovsted, C. B. and Larsson, C. and Brock, G. A. and Zhang, Z.-F.},
+	year = {2011},
+	pages = {235--239}
+}
+
 @article{Holmer2011Firstrecord,
   author = {Holmer, L. E. and Skovsted, C. B. and Larsson, C. M. and Brock, G. A. and Zhang, Z.-F.},
   doi = {10.1111/j.1475-4983.2010.01030.x},
@@ -1607,6 +1658,17 @@
   title = {{Chiton integument: ultrastructure of the sensory hairs of \textit{Mopalia muscosa} (Mollusca: Polyplacophora)}},
   volume = {223},
   year = {1982}
+}
+
+@article{Leise1984,
+	title = {Chiton integument: metamorphic changes in \textit{{Mopalia} muscosa} ({Mollusca}, {Polyplacophora})},
+	volume = {104},
+	doi = {10.1007/BF00312184},
+	number = {6},
+	journal = {Zoomorphology},
+	author = {Leise, E. M.},
+	year = {1984},
+	pages = {337--343}
 }
 
 @article{Leise1986,
@@ -1951,6 +2013,16 @@
 	author = {Meyer, Néva P. and Boyle, M. J. and Martindale, M. Q. and Seaver, E. C.},
 	year = {2010},
 	pages = {8}
+}
+
+@article{Meyer2015,
+	title = {Nervous system development in lecithotrophic larval and juvenile stages of the annelid {\textasciitilde}{Capitella} teleta{\textasciitilde}},
+	volume = {12},
+	doi = {10.1186/s12983-015-0108-y},
+	journal = {Frontiers in Zoology},
+	author = {Meyer, Néva P. and Carrillo-Baltodano, A. and Moore, R. E. and Seaver, E. C.},
+	year = {2015},
+	pages = {15}
 }
 
 @article{Meyer2015,
@@ -2490,6 +2562,15 @@
 	pages = {131--154}
 }
 
+@article{Rice1976,
+	title = {Larval development and metamorphosis in {Sipuncula}},
+	volume = {16},
+	journal = {American Zoologist},
+	author = {Rice, M. E.},
+	year = {1976},
+	pages = {563--571}
+}
+
 @article{Rice1988,
   author = {Rice, M. E.},
   journal = {Bulletin of Marine Science},
@@ -2732,6 +2813,16 @@
 	pages = {35--66}
 }
 
+@article{Scheltema1976,
+	title = {Two new species of {Chaetoderma} from off {West} {Africa} ({Aplacophora}, {Chaetodermatidae})},
+	volume = {42},
+	doi = {10.1093/oxfordjournals.mollus.a065328},
+	journal = {Journal of Molluscan Studies},
+	author = {Scheltema, Amélie H.},
+	year = {1976},
+	pages = {223--234}
+}
+
 @article{Scheltema1993,
   author = {Scheltema, A. H.},
   doi = {10.2307/1542380},
@@ -2848,6 +2939,17 @@
 	author = {Sigwart, J. D. and Sutton, M. D.},
 	year = {2007},
 	pages = {2413--2419}
+}
+
+@article{Sigwart2015Functional,
+	title = {Functional morphology in chitons ({Mollusca}, {Polyplacophora}): influences of environment and ocean acidification},
+	volume = {162},
+	doi = {10.1007/s00227-015-2761-2},
+	number = {11},
+	journal = {Marine Biology},
+	author = {Sigwart, J. D. and Green, P. A. and Crofts, S. B.},
+	year = {2015},
+	pages = {2257--2264}
 }
 
 @article{Simmons2011,
@@ -3283,6 +3385,18 @@
 	pages = {1101--1112},
 }
 
+@incollection{Tzetlin2005P,
+	address = {Dordrecht, Netherlands},
+	title = {Pharynx and intestine},
+	volume = {535/536},
+	booktitle = {Morphology, {Molecules}, {Evolution} and {Phylogeny} in {Polychaeta} and {Related} {Taxa}},
+	publisher = {Springer},
+	author = {Tzetlin, A. B. and Purschke, Günter},
+	editor = {Bartolomaeus, T and Purschke, G},
+	year = {2005},
+	pages = {199--225}
+}
+
 @article{Ushatinskaya2016Protegulumand,
   author = {Ushatinskaya, G. T.},
   doi = {10.1134/s0031030116020088},
@@ -3616,6 +3730,16 @@
   year = {1996},
 }
 
+@incollection{Williams1997,
+	title = {Part {H}. {Brachiopoda}. {Revised}. {Volume} 1: {Introduction}},
+	volume = {1},
+	booktitle = {Treatise on {Invertebrate} {Paleontology}},
+	publisher = {Elsevier},
+	author = {Williams, A. and James, M. A. and Emig, C. C. and Mackay, S. and Rhodes, M. C. and Cohen, B. L. and Gawthrop, A. B. and Peck, L. S. and Curry, G. B. and Ansell, A. D. and Cusack, M. and Walton, D. and Brunton, C. H. C. and Mackinnon, D. I. and Richardson, J. R.},
+	year = {1997},
+	pages = {1--539}
+}
+
 @incollection{Williams1997Introduction,
   author = {Williams, A. and James, M. A. and Emig, C. C. and Mackay, S. and Rhodes, M. C. and Cohen, B. L. and Gawthrop, A. B. and Peck, L. S. and Curry, G. B. and Ansell, A. D. and Cusack, M. and Walton, D. and Brunton, C. H. C. and Mackinnon, D. I. and Richardson, J. R.},
   doi = {10.17161/dt.v0i0.5560},
@@ -3645,6 +3769,15 @@
   pages = {221--262},
   volume = {41},
   year = {1998},
+}
+
+@incollection{Williams2000,
+	title = {Part {H}, {Brachiopoda}. {Linguliformea}, {Craniiformea}, and {Rhynchonelliformea}},
+	booktitle = {Treatise on {Invertebrate} {Paleontology}},
+	publisher = {Geological Society of America},
+	author = {Williams, A. and Carlson, S. J. and Brunton, C. H. C. and Holmer, L. E. and Popov, L. E. and Mergl, M. and Laurie, J. R. and Bassett, M. G. and Cocks, L. R. M. and Rong, J.-Y. and Lazarev, S. S. and Grant, R. E. and Racheboeuf, P. R. and Jin, Y.-G. and Wardlaw, B. R. and Harper, D. A. T. and Wright, A. D.},
+	year = {2000},
+	pages = {919}
 }
 
 @incollection{Williams2000LinguliformeaCraniiformea,
