--- a/References.bib
+++ b/References.bib
@@ -346,15 +346,14 @@
 }
 
 @article{BucklandNicks1988,
-  author = {Buckland‐Nicks, J. and Koss, R. and Chia, Fu‐Shiang ‐S},
-  doi = {10.1002/mrd.1120210302},
-  journal = {Gamete Research},
-  number = {3},
-  pages = {199--212},
-  pmid = {3246365},
-  title = {{Fertilization in a chiton: Acrosome‐mediated sperm‐egg fusion}},
-  volume = {21},
-  year = {1988}
+	title = {Fertilization in a chiton: acrosome‐mediated sperm‐egg fusion},
+	volume = {21},
+	doi = {10.1002/mrd.1120210302},
+	number = {3},
+	journal = {Gamete Research},
+	author = {Buckland‐Nicks, J. and Koss, R. and Chia, Fu‐Shiang},
+	year = {1988},
+	pages = {199--212}
 }
 
 @article{BucklandNicks2008,
