--- a/index.Rmd
+++ b/index.Rmd
@@ -45,7 +45,7 @@ source('italicize.R')
 
 ```{R setup-more, include=FALSE, message=FALSE}
 options(GitHubUser='ms609', GitHubRepo='halkieria', 
-        MorphoBankProject=3262, ProjectName='Scleritomorph_Phylogeny',
+        MorphoBankProject=3262, ProjectName='Scleritomorph_phylogeny',
         svgHeight=720, svgWidth=682)
 tntFiles <- list.files('TNT/', pattern='xpiwe.*\\.tre', full=TRUE)
 tntKs <- as.double(gsub(".*xpiwe([\\d\\.]+)\\..*", "\\1", tntFiles, perl=TRUE))
