--- a/References.bib
+++ b/References.bib
@@ -1548,6 +1548,15 @@
 	pages = {217--229}
 }
 
+@article{Kaas1994,
+	title = {A new species of \textit{{Leptochiton}} {Gray} 1847 ({Mollusca}: {Polyplacophora}) from the {South} {Barbados} accretionary prism},
+	volume = {68},
+	journal = {Zool. Med. Leiden},
+	author = {Kaas, P.},
+	year = {1994},
+	pages = {3}
+}
+
 @article{Katsuno2008,
 	title = {Comparative histology of radula-supporting structures in {Gastropoda}},
 	volume = {50},
@@ -1730,6 +1739,17 @@
   title = {{Early Cambrian lingulate brachiopods from the Shaanxi Province, China}},
   volume = {126},
   year = {2004}
+}
+
+@article{Li2017,
+	title = {Complex hierarchical microstructures of {Cambrian} mollusk \textit{{Pelagiella}}: {Insight} into early biomineralization and evolution},
+	volume = {7},
+	doi = {10.1038/s41598-017-02235-9},
+	number = {1},
+	journal = {Scientific Reports},
+	author = {Li, L. and Zhang, X. and Yun, H. and Li, G.},
+	year = {2017},
+	pages = {1935}
 }
 
 @article{Lindberg1985,
@@ -2087,6 +2107,17 @@
   title = {{Evaluating scenarios for the evolutionary assembly of the brachiopod body plan}},
   volume = {16},
   year = {2014}
+}
+
+@article{Nanglu2018,
+	title = {A new {Burgess} {Shale} polychaete and the origin of the annelid head revisited},
+	volume = {28},
+	doi = {10.1016/j.cub.2017.12.019},
+	number = {2},
+	journal = {Current Biology},
+	author = {Nanglu, K. and Caron, J. B.},
+	year = {2018},
+	pages = {319--326.e1}
 }
 
 @article{Nielsen1966,
@@ -2727,6 +2758,17 @@
 	pages = {73--92},
 }
 
+@article{Runnegar1985,
+	title = {Shell microstructures of {Cambrian} molluscs replicated by phosphate},
+	volume = {9},
+	doi = {10.1080/03115518508618971},
+	number = {4},
+	journal = {Alcheringa},
+	author = {Runnegar, B. N.},
+	year = {1985},
+	pages = {245--257}
+}
+
 @article{Ruppert1983,
   author = {Ruppert, E. E. and Carle, K. J.},
   doi = {10.1007/BF00310477},
@@ -2964,6 +3006,16 @@
   year = {2011}
 }
 
+@article{Simone2009,
+	title = {Comparative morphology among representatives of main taxa of {Scaphopoda} and basal protobranch {Bivalvia} ({Mollusca})},
+	volume = {49},
+	number = {32},
+	journal = {Papéis Avulsos de Zoologia (São Paulo)},
+	author = {Simone, L. R. L.},
+	year = {2009},
+	pages = {405--457}
+}
+
 @article{Skovsted2003EarlyCambrian,
   author = {Skovsted, C. B. and Holmer, L. E.},
   journal = {{Acta Palaeontologica Polonica}},
@@ -2993,6 +3045,16 @@
   pages = {171--174},
   volume = {36},
   year = {2008},
+}
+
+@article{Skovsted2009,
+	title = {The scleritome of \textit{{Paterimitra}}: an {Early} {Cambrian} stem group brachiopod from {South} {Australia}},
+	volume = {276},
+	doi = {10.1098/rspb.2008.1655},
+	journal = {Proceedings of the Royal Society B: Biological Sciences},
+	author = {Skovsted, C. B. and Holmer, L. E. and Larsson, C. M. and Högström, A. E. S. and Brock, G. A. and Topper, T. P. and Balthasar, U. and Stolk, S. P. and Paterson, J. R.},
+	year = {2009},
+	pages = {1651--1656}
 }
 
 @article{Skovsted2009Thescleritome,
@@ -3087,6 +3149,17 @@
   title = {{Ontogeny, morphology and taxonomy of the soft-bodied Cambrian 'mollusc' Wiwaxia}},
   volume = {57},
   year = {2014}
+}
+
+@article{Smith2015,
+	title = {A palaeoscolecid worm from the {Burgess} {Shale}},
+	volume = {58},
+	doi = {10.1111/pala.12210},
+	number = {6},
+	journal = {Palaeontology},
+	author = {Smith, M. R.},
+	year = {2015},
+	pages = {973--979}
 }
 
 @article{Smith2017,
@@ -3501,6 +3574,17 @@
   title = {{Machaeridians are Palaeozoic armoured annelids}},
   volume = {451},
   year = {2008}
+}
+
+@article{Vinther2009,
+	title = {The canal system in sclerites of {Lower} {Cambrian} \textit{{Sinosachites}} ({Halkieriidae}: {Sachitida}): significance for the molluscan affinities of the sachitids},
+	volume = {52},
+	doi = {10.1111/j.1475-4983.2009.00881.x},
+	number = {4},
+	journal = {Palaeontology},
+	author = {Vinther, J.},
+	year = {2009},
+	pages = {689--712}
 }
 
 @article{Vinther2012,
