--- a/References.bib
+++ b/References.bib
@@ -3162,20 +3162,23 @@
 	pages = {973--979}
 }
 
-@article{Smith2017,
-  author = {Smith, M. R.},
-  doi = {10.1101/227942},
-  journal = {bioR$\chi$iv},
-  title = {{Quantifying and visualising divergence between pairs of phylogenetic trees: implications for phylogenetic reconstruction}},
-  year = {2017}
-}
-
 @misc{Smith2018TreeSearch,
   author = {Smith, M. R.},
   doi = {10.5281/zenodo.1042590},
   title = {{TreeSearch: Phylogenetic tree search using custom optimality criteria}},
   journal = {The Comprehensive R Archive Network},
   year = {2018}
+}
+
+@article{Smith2019,
+	title = {Bayesian and parsimony approaches reconstruct informative trees from simulated morphological datasets},
+	volume = {15},
+	doi = {10.1098/rsbl.2018.0632},
+	number = {2},
+	journal = {Biology Letters},
+	author = {Smith, M. R.},
+	year = {2019},
+	pages = {20180632}
 }
 
 @article{SmithInPrep,
