--- a/References.bib
+++ b/References.bib
@@ -4130,6 +4130,13 @@
   year = {2018},
 }
 
+@article{Zhang2020,
+	title = {A {Cambrian} peanut worm and the origin of the sipunculan body plan},
+	journal = {in review},
+	author = {Zhang, Z.-F. and Smith, M. R.},
+	year = {2020}
+}
+
 @article{Zhao2012,
   author = {Zhao, F.-C. and Hu, S.-X. and Caron, J.-B. and Zhu, M.-Y. and Yin, Z.-J. and Lu, M.},
   doi = {10.1016/j.palaeo.2012.05.021},
