--- a/References.bib
+++ b/References.bib
@@ -1395,17 +1395,6 @@
 	pages = {235--239}
 }
 
-@article{Holmer2011Firstrecord,
-  author = {Holmer, L. E. and Skovsted, C. B. and Larsson, C. M. and Brock, G. A. and Zhang, Z.-F.},
-  doi = {10.1111/j.1475-4983.2010.01030.x},
-  journal = {{Palaeontology}},
-  title = {{First record of a bivalved larval shell in Early Cambrian tommotiids and its phylogenetic significance}},
-  number = {2},
-  pages = {235--239},
-  volume = {54},
-  year = {2011},
-}
-
 @article{Holmer2014OrdovicianSilurian,
   author = {Holmer, L. E. and Popov, L. E. and Bassett, M. G.},
   doi = {10.1666/13-104},
@@ -2461,7 +2450,7 @@
   year = {2009},
 }
 
-@article{Popov2010Earliestontogeny,
+@article{Popov2010,
   author = {Popov, L. E. and Bassett, M. G. and Holmer, L. E. and Skovsted, C. B. and Zuykov, M. A.},
   doi = {10.1111/j.1502-3931.2009.00197.x},
   journal = {{Lethaia}},
@@ -3342,7 +3331,7 @@
   year = {2012}
 }
 
-@article{Sutton2012Silurian,
+@article{Sutton2012N,
 	title = {A {Silurian} armoured aplacophoran and implications for molluscan phylogeny},
 	volume = {490},
 	doi = {10.1038/nature11328},
@@ -3483,7 +3472,7 @@
   year = {2016},
 }
 
-@article{Ushatinskaya2016Revisionof,
+@article{Ushatinskaya2016R,
   author = {Ushatinskaya, G. T. and Korovnikov, I. V.},
   doi = {10.1134/s0031030116050130},
   journal = {{Paleontological Journal}},
