--- a/References.bib
+++ b/References.bib
@@ -295,6 +295,17 @@
   year = {1984}
 }
 
+@article{Bhup1982,
+	title = {The development of the central nervous system in \textit{{Capitella} capitata} ({Polychaeta}, {Annelida})},
+	volume = {60},
+	doi = {10.1139/z82-295},
+	number = {10},
+	journal = {Canadian Journal of Zoology},
+	author = {Bhup, R. and Marsden, J. R.},
+	year = {1982},
+	pages = {2284--2295}
+}
+
 @article{Biggelaar1993,
 	title = {Cleavage pattern in embryos of \textit{{Haliotis} tuberculata} ({Archaeogastropoda}) and gastropod phylogeny},
 	volume = {216},
@@ -1309,6 +1320,17 @@
   year = {1994},
 }
 
+@article{Kristof2008,
+	title = {Segmental mode of neural patterning in {Sipuncula}},
+	volume = {18},
+	issn = {09609822},
+	doi = {10.1016/j.cub.2008.06.066},
+	number = {15},
+	journal = {Current Biology},
+	author = {Kristof, Alen and Wollesen, Tim and Wanninger, Andreas},
+	year = {2008},
+	pages = {1129--1132}
+}
 @article{Holborow1969,
   author = {Holborow, P. L. and Laverack, M. S. and Barber, V. C.},
   doi = {10.1007/BF00338328},
@@ -3609,6 +3631,17 @@
   number = {4},
   pages = {438-458},
   year = {2018}
+}
+
+@article{Voronezhskaya2003,
+	title = {Neuronal development in larval polychaete \textit{{Phyllodoce} maculata} ({Phyllodocidae})},
+	volume = {455},
+	doi = {10.1002/cne.10488},
+	number = {3},
+	journal = {The Journal of Comparative Neurology},
+	author = {Voronezhskaya, E. E. and Tsitrin, E. B. and Nezlin, L. P.},
+	year = {2003},
+	pages = {299--309}
 }
 
 @article{Voronezhskaya2008,
