--- a/References.bib
+++ b/References.bib
@@ -1428,7 +1428,7 @@
   year = {2014},
 }
 
-@article{Holmer2018Evolutionarysignificance,
+@article{Holmer2018E,
   author = {Holmer, L. E. and Popov, L. E. and Pour, M. G. and Claybourn, T. and Zhang, Z.-L. and Brock, G. A. and Zhang, Z.-F.},
   doi = {10.1111/let.12254},
   journal = {{Lethaia}},
